@@ -60,12 +60,12 @@ extern "C" {
  *   @XKLF_DEVICE_DISCOVERY: Backend supports device discovery, can notify
  */
 	typedef enum {
-		XKLF_CAN_TOGGLE_INDICATORS = 0x01,
-		XKLF_CAN_OUTPUT_CONFIG_AS_ASCII = 0x02,
-		XKLF_CAN_OUTPUT_CONFIG_AS_BINARY = 0x04,
-		XKLF_MULTIPLE_LAYOUTS_SUPPORTED = 0x08,
-		XKLF_REQUIRES_MANUAL_LAYOUT_MANAGEMENT = 0x10,
-		XKLF_DEVICE_DISCOVERY = 0x20
+		XKLF_CAN_TOGGLE_INDICATORS = 1 << 0,
+		XKLF_CAN_OUTPUT_CONFIG_AS_ASCII = 1 << 1,
+		XKLF_CAN_OUTPUT_CONFIG_AS_BINARY = 1 << 2,
+		XKLF_MULTIPLE_LAYOUTS_SUPPORTED = 1 << 3,
+		XKLF_REQUIRES_MANUAL_LAYOUT_MANAGEMENT = 1 << 4,
+		XKLF_DEVICE_DISCOVERY = 1 << 5
 	} XklEngineFeatures;
 
 /**
